--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/biotope/biotope.git"
   },
+  "main": "./dist/resources/components/Slider/index.js",
   "license": "MIT",
   "scripts": {
     "start": "gulp serve",
