Errors are gone now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,26 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"jsx": "React",
+		"jsx": "react",
 		"module": "es2015",
 		"moduleResolution": "Node",
 		"noImplicitAny": false,
 		"sourceMap": true,
 		"suppressImplicitAnyIndexErrors": true,
 		"allowSyntheticDefaultImports": true,
-		"target": "ES6",
+		"target": "ES5",
 		"lib": [
 			"es2017",
 			"dom"
-		  ]
+		]
 	},
 	"awesomeTypescriptLoaderOptions": {
 		"useCache": true,
 		"reportFiles": [
 			"src/**/*.{ts,tsx}"
 		]
-    },
-	"typeRoots": [
-		"node_modules/@types"
-	],
-	"types": [
-		"react",
-		"react-dom",
-		"jquery"
-	],
+	},
 	"exclude": [
-		"node_modules",
 		"patterns",
 		"test",
 		"dist",
