--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@biotope/resource-loader": "^1.3.0",
     "@types/jquery": "3.3.2",
     "@types/modernizr": "3.5.1",
+    "@types/node": "^10.7.1",
     "@webcomponents/webcomponentsjs": "^1.2.0",
     "breakpoint-sass": "2.7.1",
     "enquire.js": "git+https://github.com/WickyNilliams/enquire.js.git#v2.1.6",
