--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "vi-css-helper": "https://github.com/virtualidentityag/vi-css-helper.git#1.1.1"
   },
   "devDependencies": {
-    "@biotope/build": "^5.4.0",
+    "@biotope/build": "git+ssh://git@github.com:biotope/biotope-build.git#experimental-webcomponents",
     "@biotope/generator": "^1.1.2",
     "awesome-typescript-loader": "^5.2.0",
     "chai": "4.1.2",
