--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "vi-css-helper": "https://github.com/virtualidentityag/vi-css-helper.git#1.1.1"
   },
   "devDependencies": {
-    "@biotope/build": "git+ssh://git@github.com:biotope/biotope-build.git#experimental-webcomponents",
+    "@biotope/build": "git+ssh://git@github.com:biotope/biotope-build.git#webpack-svg-loader",
     "@biotope/generator": "^1.1.2",
     "awesome-typescript-loader": "^5.2.0",
     "chai": "4.1.2",
@@ -51,9 +51,5 @@
     "gulp": "3.9.1",
     "mocha": "5.0.1",
     "plop": "^2.0.0"
-  },
-  "engines": {
-    "node": ">=8.9.0",
-    "yarn": ">=1.4.0"
   }
 }
